[feat] member join, SpringSecurity비밀번호 암호화

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,12 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 
 	//spring security 관련
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
+
+	//JWT관련
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
 
 }
 
