[feat] mustache, springsecurity 기본 설정

--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
 	implementation 'org.hibernate:hibernate-search:5.11.1.Final'
 
 	//JSP 관련
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl'
+//	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+//	implementation 'javax.servlet:jstl'
 
 	//session 관련
 	implementation 'org.springframework.session:spring-session-core'
@@ -44,6 +44,9 @@ dependencies {
 
 	//JWT관련
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	//mustache 관련
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
 
 
 }
